[gd_scene load_steps=19 format=2]

[ext_resource path="res://addons/mod_loader_tools/interface/mod_selector.gd" type="Script" id=1]
[ext_resource path="res://addons/mod_loader_tools/interface/theme.tres" type="Theme" id=2]
[ext_resource path="res://addons/mod_loader_tools/interface/font/font_icon.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/mod_loader_tools/interface/font/font_h1.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/mod_loader_tools/interface/font/font_h3.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/mod_loader_tools/interface/font/font_annotation.tres" type="DynamicFont" id=6]
[ext_resource path="res://addons/mod_loader_tools/interface/font/font_icon_inline.tres" type="DynamicFont" id=7]
[ext_resource path="res://addons/mod_loader_tools/interface/font/font_h2.tres" type="DynamicFont" id=8]
[ext_resource path="res://addons/mod_loader_tools/interface/font/font_p.tres" type="DynamicFont" id=9]
[ext_resource path="res://addons/mod_loader_tools/interface/mod_details_popup.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/mod_loader_tools/interface/mod_list.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/mod_loader_tools/interface/font/font_p_bold.tres" type="DynamicFont" id=12]
[ext_resource path="res://addons/mod_loader_tools/interface/font/font_p_italic.tres" type="DynamicFont" id=13]

[sub_resource type="StyleBoxFlat" id=173]
bg_color = Color( 0.2, 0.227451, 0.309804, 1 )

[sub_resource type="InputEventKey" id=170]
scancode = 16777221

[sub_resource type="ShortCut" id=171]
shortcut = SubResource( 170 )

[sub_resource type="StyleBoxEmpty" id=169]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0

[sub_resource type="Theme" id=172]
default_font = ExtResource( 5 )

[node name="ModSelector" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 173 )
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="HBox" type="HBoxContainer" parent="Margin"]
margin_left = 40.0
margin_top = 40.0
margin_right = 1880.0
margin_bottom = 1040.0
mouse_filter = 2
custom_constants/separation = 25

[node name="ModListDisabled" parent="Margin/HBox" instance=ExtResource( 11 )]
margin_right = 745.0
is_enabled_list = false

[node name="ModListEnabled" parent="Margin/HBox" instance=ExtResource( 11 )]
margin_left = 770.0
margin_right = 1516.0

[node name="LoaderInfoSection" type="VBoxContainer" parent="Margin/HBox"]
margin_left = 1541.0
margin_right = 1840.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.16
custom_constants/separation = 0

[node name="FixedSpacer" type="MarginContainer" parent="Margin/HBox/LoaderInfoSection"]
margin_right = 299.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 58 )

[node name="Label" type="Label" parent="Margin/HBox/LoaderInfoSection"]
margin_top = 58.0
margin_right = 299.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 4 )
text = "Godot ModLoader"

[node name="VersionNote" type="Label" parent="Margin/HBox/LoaderInfoSection"]
margin_top = 100.0
margin_right = 299.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 6 )
text = "v.0.1.1 for Godot 3.x"

[node name="StartGame" type="Button" parent="Margin/HBox/LoaderInfoSection"]
margin_top = 120.0
margin_right = 299.0
margin_bottom = 159.0
custom_fonts/font = ExtResource( 8 )
shortcut = SubResource( 171 )
text = "Start Game"

[node name="SkipModSelectionToggle" type="CheckBox" parent="Margin/HBox/LoaderInfoSection"]
margin_top = 159.0
margin_right = 299.0
margin_bottom = 192.0
text = "Skip mod selection"
flat = true

[node name="ModSelectInfo" type="Label" parent="Margin/HBox/LoaderInfoSection"]
margin_top = 192.0
margin_right = 299.0
margin_bottom = 222.0
custom_fonts/font = ExtResource( 6 )
text = "Skipping will disable showing this screen unless ALT is pressed on startup. For best results, press right after the game window opens."
autowrap = true

[node name="GrowSpacer" type="MarginContainer" parent="Margin/HBox/LoaderInfoSection"]
margin_top = 222.0
margin_right = 299.0
margin_bottom = 767.0
size_flags_vertical = 3

[node name="Info" type="Label" parent="Margin/HBox/LoaderInfoSection"]
margin_top = 767.0
margin_right = 299.0
margin_bottom = 806.0
custom_fonts/font = ExtResource( 8 )
text = "Info"

[node name="InfoText" type="RichTextLabel" parent="Margin/HBox/LoaderInfoSection"]
margin_top = 806.0
margin_right = 299.0
margin_bottom = 894.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 169 )
bbcode_enabled = true
bbcode_text = "Links:
[url=https://github.com/GodotModding/godot-mod-loader/issues]Report a ModLoader bug[/url]
[url=https://github.com/GodotModding/godot-mod-loader]Contribute[/url]
[url=https://github.com/GodotModding/godot-mod-loader/README.md]Mod Developer Guide[/url]"
text = "Links:
Report a ModLoader bug
Contribute
Mod Developer Guide"
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="Margin/HBox/LoaderInfoSection"]
margin_top = 894.0
margin_right = 299.0
margin_bottom = 914.0
custom_constants/separation = 20

[node name="ResetNote" type="Label" parent="Margin/HBox/LoaderInfoSection"]
margin_top = 914.0
margin_right = 299.0
margin_bottom = 934.0
custom_fonts/font = ExtResource( 6 )
text = "Note:  reset after each game update. Mod config stays saved."
autowrap = true

[node name="ResetModLoader" type="Button" parent="Margin/HBox/LoaderInfoSection"]
margin_top = 934.0
margin_right = 299.0
margin_bottom = 967.0
text = "Redo Loader Setup"

[node name="Quit" type="Button" parent="Margin/HBox/LoaderInfoSection"]
margin_top = 967.0
margin_right = 299.0
margin_bottom = 1000.0
text = "Quit"

[node name="RestartPopup" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="RestartGame" type="AcceptDialog" parent="RestartPopup"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.0
margin_top = -122.0
margin_right = 218.0
margin_bottom = 123.0
theme = SubResource( 172 )
popup_exclusive = true
window_title = "Restart Game"
dialog_text = "The Mod Loader has been initialized successfully. 

Press OK to quit and then restart the game."
dialog_hide_on_ok = false
dialog_autowrap = true

[node name="DetailsPopup" parent="." instance=ExtResource( 10 )]
visible = false

[node name="HdpiFontAdjustments" type="Control" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="FontH1" type="Label" parent="HdpiFontAdjustments"]
visible = false
margin_top = 518.0
margin_right = 1920.0
margin_bottom = 562.0
custom_fonts/font = ExtResource( 4 )

[node name="FontH2" type="Label" parent="HdpiFontAdjustments"]
visible = false
margin_top = 518.0
margin_right = 1920.0
margin_bottom = 562.0
custom_fonts/font = ExtResource( 8 )

[node name="FontH3" type="Label" parent="HdpiFontAdjustments"]
visible = false
margin_top = 518.0
margin_right = 1920.0
margin_bottom = 562.0
custom_fonts/font = ExtResource( 5 )

[node name="FontP" type="Label" parent="HdpiFontAdjustments"]
visible = false
margin_top = 518.0
margin_right = 1920.0
margin_bottom = 562.0
custom_fonts/font = ExtResource( 9 )

[node name="FontPBold" type="Label" parent="HdpiFontAdjustments"]
visible = false
margin_top = 518.0
margin_right = 1920.0
margin_bottom = 562.0
custom_fonts/font = ExtResource( 12 )

[node name="FontPItalic" type="Label" parent="HdpiFontAdjustments"]
visible = false
margin_top = 518.0
margin_right = 1920.0
margin_bottom = 562.0
custom_fonts/font = ExtResource( 13 )

[node name="FontAnnotations" type="Label" parent="HdpiFontAdjustments"]
visible = false
margin_top = 518.0
margin_right = 1920.0
margin_bottom = 562.0
custom_fonts/font = ExtResource( 6 )

[node name="FontIconSolid" type="Label" parent="HdpiFontAdjustments"]
visible = false
margin_top = 518.0
margin_right = 1920.0
margin_bottom = 562.0
custom_fonts/font = ExtResource( 3 )

[node name="FontIconInline" type="Label" parent="HdpiFontAdjustments"]
visible = false
margin_top = 518.0
margin_right = 1920.0
margin_bottom = 562.0
custom_fonts/font = ExtResource( 7 )

[connection signal="item_rect_changed" from="." to="." method="_on_mod_selector_item_rect_changed"]
[connection signal="pressed" from="Margin/HBox/LoaderInfoSection/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="toggled" from="Margin/HBox/LoaderInfoSection/SkipModSelectionToggle" to="." method="_on_mod_selection_toggle_toggled"]
[connection signal="meta_clicked" from="Margin/HBox/LoaderInfoSection/InfoText" to="." method="_on_loader_info_meta_clicked"]
[connection signal="meta_hover_ended" from="Margin/HBox/LoaderInfoSection/InfoText" to="." method="_on_loader_info_meta_hover_ended"]
[connection signal="meta_hover_started" from="Margin/HBox/LoaderInfoSection/InfoText" to="." method="_on_loader_info_meta_hover_started"]
[connection signal="pressed" from="Margin/HBox/LoaderInfoSection/ResetModLoader" to="." method="_on_reset_mod_loader_pressed"]
[connection signal="pressed" from="Margin/HBox/LoaderInfoSection/Quit" to="." method="_on_quit_pressed"]
[connection signal="confirmed" from="RestartPopup/RestartGame" to="." method="_on_restart_game_confirmed"]
